Added full Spanish + UI Fixes on localization

--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -26,16 +26,16 @@
   "add_kanji_updateKanji_failed_update": "Error updating kanji",
   "add_kanji_updateKanji_failed": "Generic error updating kanji",
   "add_kanji_validateKanji_failed": "Fill up the form correctly",
-  "add_kanji_update_title": "Update Kanji",
-  "add_kanji_new_title": "Add Kanji",
-  "add_kanji_textForm_kanji": "Kanji Form",
+  "add_kanji_update_title": "Update",
+  "add_kanji_new_title": "Add",
+  "add_kanji_textForm_kanji": "Kanji",
   "add_kanji_textForm_kanji_ext": "家具",
   "add_kanji_textForm_reading": "Pronunciation",
   "add_kanji_textForm_reading_ext": "かぐ",
   "add_kanji_textForm_meaning": "Meaning",
   "add_kanji_textForm_meaning_ext": "Furniture",
-  "add_kanji_save": "Save Kanji",
-  "add_kanji_saveAndNext": "Add Another Kanji",
+  "add_kanji_save": "Save",
+  "add_kanji_saveAndNext": "Add Another",
   "backup_bloc_creation_successful": "Back up created successfully",
   "backup_bloc_creation_failed": "Something went wrong while creating the back up:",
   "backup_bloc_merge_successful": "Back up merged successfully",
@@ -104,7 +104,7 @@
   "kan_list_tile_createDialogForDeletingKanList_title": "Remove a KanList",
   "kan_list_tile_createDialogForDeletingKanList_content": "Are you sure you want to remove this list and all its content?",
   "kan_list_tile_createDialogForDeletingKanList_positive": "Remove",
-  "filters_all": "Last Created",
+  "filters_all": "Creation",
   "filters_writing": "Writing %",
   "filters_reading": "Reading %",
   "filters_recognition": "Recognition %",
@@ -153,13 +153,13 @@
   "test_result_title": "You have obtained...",
   "test_result_disclaimer": "The result will be saved in to your device. All results can be visualized in your settings.",
   "test_result_save_button_label": "Save and Exit",
-  "writing_next_kanji_label": "Next Kanji",
-  "writing_validation_failed": "Write the character first",
+  "writing_next_kanji_label": "Next",
+  "writing_validation_failed": "Write the something first",
   "blitz_bottom_sheet_title": "Make a blitz test",
   "blitz_bottom_sheet_content": "random kanji will be selected. Let's take the blitz test!",
   "blitz_bottom_sheet_label": "Blitz",
   "blitz_bottom_sheet_on_label": "Blitz on",
   "back_button_label": "Back",
   "study_modes_good_luck": "Good Luck!",
-  "study_modes_empty": "The kanji list selected for the test is empty. Cannot perform test."
+  "study_modes_empty": "The list selected for the test is empty. Cannot perform test."
 }
