--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -1,3 +1,166 @@
 {
+  "backup_queries_mergeBackUp_failed": "El paquete ha fallado",
+  "backup_queries_mergeBackUp_catch": "La base de datos es nula",
+  "authentication_failed": "La reautenticación ha fallado. Inténtalo de nuevo más tarde",
+  "authentication_changePassword_log_out": "La sesión no ha sido iniciada. Inicia sesión y podrás cambiar tu contraseña",
+  "authentication_deleteAccount_wrong_provider": "Proveedor incorrecto. Inténtalo de nuevo más tarde",
+  "backup_firebase_createBackUp_listEmpty": "Los datos del dispositivo actual están vacíos",
+  "backup_firebase_getLastUpdated_successful": "Última copia de seguridad completada",
+  "backup_firebase_getLastUpdated_noBackUp": "No hay copia de seguridad disponible con la cuenta actual",
+  "study_modes_writing": "Escritura",
+  "study_modes_reading": "Lectura",
+  "study_modes_recognition": "Reconocimiento",
+  "study_modes_writing_ext": "書く",
+  "study_modes_reading_ext": "読む",
+  "study_modes_recognition_ext": "認識",
+  "study_mode_update_handler_poppedTest_content": "La prueba será inválida y no se proporcionará ningún resultado",
+  "study_mode_update_handler_finishedTest_content": "Pulsa en 'Finalizar' para ver los resultados",
+  "study_mode_update_handler_poppedPractice_content": "Se guardará la puntuación hasta este kanji. El kanji actual contará con el 50% de acierto",
+  "study_mode_update_handler_finishedPractice_content": "Pulsa en 'Finalizar' para terminar la sesión de estudio",
+  "study_mode_update_handler_finished_title": "¡Has terminado!",
+  "study_mode_update_handler_popped_title": "¿Quieres salir?",
+  "study_mode_update_handler_finished_positive": "Terminar",
+  "study_mode_update_handler_popped_positive": "Salir",
+  "add_kanji_createKanji_failed_insertion": "Error al crear el kanji",
+  "add_kanji_createKanji_failed": "Error genérico al creación el kanji",
+  "add_kanji_updateKanji_failed_update": "Error al actualizar el kanji",
+  "add_kanji_updateKanji_failed": "Error genérico al actualización el kanji",
+  "add_kanji_validateKanji_failed": "Rellena correctamente el formulario",
+  "add_kanji_update_title": "Actualizar",
+  "add_kanji_new_title": "Añadir",
+  "add_kanji_textForm_kanji": "Kanji",
+  "add_kanji_textForm_kanji_ext": "家具",
+  "add_kanji_textForm_reading": "Pronunciación",
+  "add_kanji_textForm_reading_ext": "かぐ",
+  "add_kanji_textForm_meaning": "Significado",
+  "add_kanji_textForm_meaning_ext": "Mobiliario",
+  "add_kanji_save": "Guardar",
+  "add_kanji_saveAndNext": "Añadir otro",
+  "backup_bloc_creation_successful": "Copia de seguridad creada con éxito",
+  "backup_bloc_creation_failed": "Algo salió mal mientras se creaba la copia de seguridad:",
+  "backup_bloc_merge_successful": "Copia de seguridad fusionada con éxito",
+  "backup_bloc_merge_failed": "Algo salió mal mientras se fusionaba la copia de seguridad:",
+  "backup_bloc_removal_successful": "Copia de seguridad eliminada con éxito",
+  "backup_bloc_removal_failed": "Algo salió mal mientras se eliminaba la copia de seguridad:",
+  "backup_title": "Copias de Seguridad",
+  "backup_creation_tile": "Crear copia de seguridad",
+  "backup_merge_tile": "Fusionar copia de seguridad",
+  "backup_removal_tile": "Eliminar copia de seguridad",
+  "backup_creation_dialog_title": "Crear copia de seguridad",
+  "backup_creation_dialog_content": "La copia de seguridad se creará en la nube. Los datos actuales de tu dispositivo se guardarán sustituyendo los datos de la copia de seguridad actual. Los tests no se guardarán. ¿Quieres continuar?",
+  "backup_creation_dialog_positive": "Crear",
+  "backup_merge_dialog_title": "Fusión de copia de seguridad",
+  "backup_merge_dialog_content": "Los datos de la copia de seguridad se instalarán en tu dispositivo fusionándolos con los datos actuales que tienes. ¿Quieres continuar?",
+  "backup_merge_dialog_positive": "Fusionar",
+  "backup_removal_dialog_title": "Eliminación de la copia de seguridad",
+  "backup_removal_dialog_content": "Los datos de la copia de seguridad se eliminarán completamente del servidor y ya no estarán disponibles. ¿Quieres continuar?",
+  "backup_removal_dialog_positive": "Eliminar",
+  "login_bloc_close_session_successful": "Se ha cerrado la sesión con éxito. Ahora puedes cerrar esta página",
+  "login_bloc_close_session_failed": "Error desconocido al cerrar la sesión",
+  "login_bloc_remove_account_successful": "La cuenta y todos tus datos en el servidor han sido eliminados con éxito. Ahora puedes cerrar esta página",
+  "login_bloc_remove_account_failed": "Error desconocido al eliminar la cuenta",
+  "login_login_title": "Iniciar Sesión",
+  "login_signUp_title": "Registrarse",
+  "login_changePasswordDialog_title": "Cambiar contraseña",
+  "login_changePasswordDialog_hint": "Contraseña",
+  "login_changePasswordDialog_old_header": "Contraseña actual",
+  "login_changePasswordDialog_new_header": "Nueva contraseña",
+  "login_changePasswordDialog_positive": "Cambiar",
+  "login_removeAccountDialog_title": "Eliminar cuenta",
+  "login_removeAccountDialog_content": "Al eliminar tu cuenta también se eliminarán todas las copias de seguridad. Aunque podrás seguir utilizando la aplicación :)",
+  "login_removeAccountDialog_hint": "Contraseña",
+  "login_removeAccountDialog_header": "Contraseña actual",
+  "login_removeAccountDialog_positive": "Eliminar",
+  "login_formDisclaimer": "Al crear una cuenta o iniciar sesión, obtienes acceso a las copias de seguridad. Las copias de seguridad te permitirán mantener tus listas y puntuaciones actuales en todos los dispositivos. Lee los diálogos que aparecen al crear, fusionar o eliminar una copia de seguridad para obtener más información sobre estas operaciones",
+  "login_email_hint": "minombre@proveedor.com",
+  "login_email_header": "Email",
+  "login_password_hint": "••••••••••",
+  "login_password_header": "Contraseña",
+  "login_authentication_failed": "Algo ha salido mal mientras se te autenticaba:",
+  "login_form_positive": "Enviar",
+  "login_current_account_logged": "Has iniciado sesión con",
+  "login_manage_backup_title": "Gestiona tu copia de seguridad",
+  "login_miscellaneous_title": "Misc",
+  "login_close_session_title": "Cerrar sesión",
+  "kanji_bottom_sheet_removeKanji_title": "Eliminar un kanji",
+  "kanji_bottom_sheet_removeKanji_content": "¿Estás seguro de que quieres eliminar este kanji?",
+  "kanji_bottom_sheet_removeKanji_positive": "Eliminar",
+  "kanji_bottom_sheet_createDialogForDeletingKanji_removal_failed": "Error al eliminar el kanji",
+  "kanji_bottom_sheet_createDialogForDeletingKanji_failed": "Error genérico al eliminar kanji",
+  "wildcard": "?",
+  "created_label": "Creado",
+  "kanji_bottom_sheet_update_label": "Actualizar",
+  "kanji_bottom_sheet_removal_label": "Eliminar",
+  "list_details_loadUpPractice_failed": "¡Primero añade nuevos kanji para estudiar!",
+  "list_details_updateKanListName_title": "Cambiar el nombre de la KanList",
+  "list_details_updateKanListName_header": "Nombre",
+  "list_details_updateKanListName_positive": "Actualizar",
+  "list_details_load_failed": "No se han podido recoger los kanji.",
+  "list_details_practice_button_label": "Practicar",
+  "list_details_practice_button_label_ext": "練習",
+  "list_details_learningMode_spatial": "Aprendizaje espacial",
+  "list_details_learningMode_random": "Aprendizaje aleatorio",
+  "list_details_empty": "No hay kanji disponibles",
+  "kan_list_tile_createDialogForDeletingKanList_title": "Eliminar una KanList",
+  "kan_list_tile_createDialogForDeletingKanList_content": "¿Estás seguro de que quieres eliminar esta lista y todo su contenido?",
+  "kan_list_tile_createDialogForDeletingKanList_positive": "Eliminar",
+  "filters_all": "Creado",
+  "filters_writing": "Escritura %",
+  "filters_reading": "Lectura %",
+  "filters_recognition": "Reconocimiento %",
+  "study_bottom_sheet_title": "Haz una prueba con las KanList de tu elección",
+  "study_bottom_sheet_load_failed": "Fallo en la recuperación de las listas",
+  "study_bottom_sheet_button_label_ext": "終わり",
+  "study_bottom_sheet_button_label": "¡Hecho!",
+  "kanji_lists_createDialogForAddingKanList_title": "Nueva KanList",
+  "kanji_lists_createDialogForAddingKanList_header": "KanList Nombre",
+  "kanji_lists_createDialogForAddingKanList_hint": "Nombre",
+  "kanji_lists_createDialogForAddingKanList_positive": "Crear",
+  "google_play_link": "https://play.google.com/store/apps/details?id=com.gabr.garc.kanpractice&hl=es&gl=US",
+  "kanji_lists_versionDialog_button_label": "Ir a la tienda",
+  "kanji_lists_versionDialog_title": "Nueva versión disponible",
+  "kanji_lists_searchBar_hint": "Buscar por nombre de lista, kanji, significado, pronunciación",
+  "kanji_lists_newUpdateAvailable_label": "¡Nueva actualización!",
+  "kanji_lists_load_failed": "Fallo al recuperar las listas",
+  "kanji_lists_empty": "No hay listas disponibles",
+  "done_button_label": "¡Hecho!",
+  "perfect_button_label": "¡Lo tengo!",
+  "wrong_button_label": "Lo siento...",
+  "developer_info_label": "Info del Desarrollador",
+  "developer_info_follow": "@gabrielglbh en GitHub",
+  "developer_info_report": "Reportar errores a",
+  "launch_url_failed": "No se ha podido lanzar el sitio web",
+  "settings_title": "Ajustes",
+  "settings_appearance_section": "Interfaz",
+  "settings_appearance_theme": "Cambiar tema",
+  "settings_progress_section": "Progreso",
+  "settings_progress_testHistory": "Historial de Tests",
+  "settings_account_section": "Gestionar Cuenta",
+  "settings_account_label": "Cuenta",
+  "settings_information_section": "Información",
+  "settings_information_rating": "¡Valora la aplicación!",
+  "settings_information_rating_failed": "No se ha podido lanzar la tienda",
+  "settings_information_developer_label": "Desarrollador",
+  "settings_information_license_label": "Licencias",
+  "settings_information_terms_label": "Política de privacidad y condiciones",
+  "test_history_showRemoveTestsDialog_title": "Eliminar todas los tests",
+  "test_history_showRemoveTestsDialog_content": "Se eliminarán todas las pruebas guardadas en este dispositivo. Esta acción no se puede deshacer. ¿Quieres continuar?",
+  "test_history_showRemoveTestsDialog_positive": "Eliminar",
+  "test_history_title": "Historial de Tests",
+  "test_history_load_failed": "Fallo en la recuperación de tests",
+  "test_history_empty": "No hay pruebas disponibles",
+  "test_history_testTaken": "Prueba realizada",
+  "test_result_title": "Has obtenido...",
+  "test_result_disclaimer": "El resultado se guardará en tu dispositivo. Todos los resultados se pueden visualizar en los ajustes",
+  "test_result_save_button_label": "Guardar y salir",
+  "writing_next_kanji_label": "Siguiente",
+  "writing_validation_failed": "Escribir algo primero",
+  "blitz_bottom_sheet_title": "Hacer un test blitz",
+  "blitz_bottom_sheet_content": "kanji serán seleccionados aleatoriamente. ¡Empecemos el test blitz!",
+  "blitz_bottom_sheet_label": "Blitz",
+  "blitz_bottom_sheet_on_label": "Blitz en",
+  "back_button_label": "Atrás",
+  "study_modes_good_luck": "¡Buena Suerte!",
+  "study_modes_empty": "La lista seleccionada para la prueba está vacía. No se puede realizar."
 
 }
