Added 4 buttons validation + UI Enhancement

--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -124,8 +124,10 @@
   "kanji_lists_load_failed": "Failed to retrieve lists.",
   "kanji_lists_empty": "No available lists.",
   "done_button_label": "Done!",
-  "perfect_button_label": "Got it!",
-  "wrong_button_label": "My Bad...",
+  "perfect_button_label": "Perfect",
+  "mid_perfect_button_label": "Good",
+  "mid_wrong_button_label": "Partial",
+  "wrong_button_label": "Wrong",
   "developer_info_label": "Developer Info",
   "developer_info_follow": "@gabrielglbh on GitHub",
   "developer_info_report": "Report bugs to",
