--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -124,8 +124,10 @@
   "kanji_lists_load_failed": "Fallo al recuperar las listas",
   "kanji_lists_empty": "No hay listas disponibles",
   "done_button_label": "¡Hecho!",
-  "perfect_button_label": "¡Lo tengo!",
-  "wrong_button_label": "Lo siento...",
+  "perfect_button_label": "Perfecto",
+  "mid_perfect_button_label": "Bien",
+  "mid_wrong_button_label": "Parcial",
+  "wrong_button_label": "Mal",
   "developer_info_label": "Info del Desarrollador",
   "developer_info_follow": "@gabrielglbh en GitHub",
   "developer_info_report": "Reportar errores a",
