Added settings for contribution & minor fixes

--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -140,11 +140,12 @@
   "settings_account_section": "Manage Account",
   "settings_account_label": "Account",
   "settings_information_section": "Information",
+  "settings_information_contribute": "KanPractice is Open Source. Contribute!",
   "settings_information_rating": "Rate the app!",
   "settings_information_rating_failed": "Could not launch app store",
   "settings_information_developer_label": "Developer",
   "settings_information_license_label": "Licenses",
-  "settings_information_terms_label": "Privacy Policy & Conditions",
+  "settings_information_terms_label": "Legal",
   "test_history_showRemoveTestsDialog_title": "Removing All Tests",
   "test_history_showRemoveTestsDialog_content": "All tests saved on this device will be removed. This action cannot be undone. Do you want to proceed?",
   "test_history_showRemoveTestsDialog_positive": "Remove",
