--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -140,11 +140,12 @@
   "settings_account_section": "Gestionar Cuenta",
   "settings_account_label": "Cuenta",
   "settings_information_section": "Información",
+  "settings_information_contribute": "KanPractice es de Código Abierto. ¡Contribuye!",
   "settings_information_rating": "¡Valora la aplicación!",
   "settings_information_rating_failed": "No se ha podido lanzar la tienda",
   "settings_information_developer_label": "Desarrollador",
   "settings_information_license_label": "Licencias",
-  "settings_information_terms_label": "Política de privacidad y condiciones",
+  "settings_information_terms_label": "Legal",
   "test_history_showRemoveTestsDialog_title": "Eliminar todas los tests",
   "test_history_showRemoveTestsDialog_content": "Se eliminarán todas las pruebas guardadas en este dispositivo. Esta acción no se puede deshacer. ¿Quieres continuar?",
   "test_history_showRemoveTestsDialog_positive": "Eliminar",
