--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -172,5 +172,6 @@
   "tutorial_details": "TODO",
   "tutorial_writing": "TODO",
   "tutorial_reading": "TODO",
-  "tutorial_recognition": "TODO"
+  "tutorial_recognition": "TODO",
+  "tutorial_tests": "TODO"
 }
