--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -166,7 +166,9 @@
   "study_modes_good_luck": "Viel Glück!",
   "study_modes_empty": "Die für den Test ausgewählte Liste ist leer. Kann Test nicht durchführen.",
   "load_failed_try_again_button_label": "Erneut versuchen",
+  "settings_tutorial_label": "TODO",
   "tutorial_done": "Start!",
+  "tutorial_skip": "TODO",
   "tutorial_kanlist": "TODO",
   "tutorial_lists": "TODO",
   "tutorial_details": "TODO",
