Added vesion notes on update

--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -119,6 +119,7 @@
   "google_play_link": "https://play.google.com/store/apps/details?id=com.gabr.garc.kanpractice&hl=en&gl=US",
   "kanji_lists_versionDialog_button_label": "Playstore besuchen",
   "kanji_lists_versionDialog_title": "Neue Version verfügbar",
+  "kanji_lists_versionDialog_notes": "Anmerkungen zur Version:",
   "kanji_lists_searchBar_hint": "Suche nach Listenname, Kanji, Bedeutung, Aussprache",
   "kanji_lists_newUpdateAvailable_label": "Neue Version!",
   "kanji_lists_load_failed": "Fehler beim Abrufen der Listen.",
@@ -133,10 +134,11 @@
   "developer_info_report": "Fehler melden an",
   "launch_url_failed": "Website konnte nicht gestartet werden",
   "settings_title": "Einstellungen",
-  "settings_appearance_section": "Aussehen",
-  "settings_appearance_theme": "Theme wechseln",
-  "settings_progress_section": "Fortschritt",
-  "settings_progress_testHistory": "Testverlauf",
+  "settings_general": "Allgemein",
+  "settings_general_theme": "Theme wechseln",
+  "settings_general_testHistory": "Testverlauf",
+  "settings_tutorial_label": "Tutorial anzeigen",
+  "settings_general_versionNotes": "Versionshinweise",
   "settings_account_section": "Konto verwalten",
   "settings_account_label": "Konto",
   "settings_information_section": "Information",
@@ -166,7 +168,6 @@
   "study_modes_good_luck": "Viel Glück!",
   "study_modes_empty": "Die für den Test ausgewählte Liste ist leer. Kann Test nicht durchführen.",
   "load_failed_try_again_button_label": "Erneut versuchen",
-  "settings_tutorial_label": "Tutorial anzeigen",
   "tutorial_done": "Start!",
   "tutorial_skip": "Tutorial überspringen",
   "tutorial_kanlist": "Willkommen bei KanPractice!\n\n In dieser App können Sie Ihre eigenen Vokabellisten erstellen und Ihre Fortschritte im Detail sehen, während Sie Ihr Japanisch verbessern.\n\nDies ist die Hauptansicht. Hier können Sie verschiedene Dinge tun, wie: Listen erstellen, Ihren Fortschritt in jeder Liste ansehen, filtern, suchen und Tests machen.\n\n(1): Wenn Sie hier klicken, wird ein Dialogfeld angezeigt, in das Sie den Namen der neuen Vokabelliste eingeben können. Sobald sie erstellt ist, wird sie in der Liste angezeigt.\n\n(2): Dies sind die beiden Aktionen zur Durchführung von Tests. Zum einen gibt es den 'Blitz' der Blitztest, ein Test, der aus 30 zufälligen Wörtern aus allen Ihren Listen besteht. Andererseits gibt es 'Kreis' Tests, die Sie anpassen können, indem Sie auswählen, welche Listen Sie einbeziehen möchten. In beiden Modi können Sie auswählen, welche Art des Lernens Sie wünschen: Schreiben, Lesen oder Erkennen.\n\n(3): Beispielliste. Sie können Ihren Fortschritt bei jeder Lernart sehen. Wenn Sie auf diese Schaltfläche klicken, gelangen Sie zur Detailansicht. Wenn Sie es gedrückt lassen, können Sie die Liste löschen.",
