--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -119,6 +119,7 @@
   "google_play_link": "https://play.google.com/store/apps/details?id=com.gabr.garc.kanpractice&hl=en&gl=US",
   "kanji_lists_versionDialog_button_label": "Go to store",
   "kanji_lists_versionDialog_title": "New version available",
+  "kanji_lists_versionDialog_notes": "Version Notes:",
   "kanji_lists_searchBar_hint": "Search by list name, kanji, meaning, pronunciation",
   "kanji_lists_newUpdateAvailable_label": "New Update!!",
   "kanji_lists_load_failed": "Failed to retrieve lists.",
@@ -133,10 +134,11 @@
   "developer_info_report": "Report bugs to",
   "launch_url_failed": "Could not launch website",
   "settings_title": "Settings",
-  "settings_appearance_section": "Appearance",
-  "settings_appearance_theme": "Switch Theme",
-  "settings_progress_section": "Progress",
-  "settings_progress_testHistory": "Test History",
+  "settings_general": "General",
+  "settings_general_theme": "Switch Theme",
+  "settings_general_testHistory": "Test History",
+  "settings_tutorial_label": "Show tutorial",
+  "settings_general_versionNotes": "Version Notes",
   "settings_account_section": "Manage Account",
   "settings_account_label": "Account",
   "settings_information_section": "Information",
@@ -166,7 +168,6 @@
   "study_modes_good_luck": "Good Luck!",
   "study_modes_empty": "The list selected for the test is empty. Cannot perform test.",
   "load_failed_try_again_button_label": "Try again",
-  "settings_tutorial_label": "Show tutorial",
   "tutorial_done": "Start!",
   "tutorial_skip": "Skip Tutorial",
   "tutorial_kanlist": "Welcome to KanPractice!\n\nIn this app you will be able to create your own vocabulary lists and see your progress in detail as you improve your Japanese.\n\nThis is the main view. Here you can do various things like: create lists, view your progress in each list, filter, search and take tests.\n\n(1): When you click here, a dialog will be displayed to enter the name of the new vocabulary list. When created, it will appear in the list.\n\n(2): These are the two actions to perform tests. On the one hand, the 'lightning bolt' is the Blitz Tests, tests consisting of 30 random words belonging to all your lists. On the other hand, the 'circle' are tests that you can customize, choosing which lists you want to be included.In both modes you can select what type of learning you want: writing, reading or recognition.\n\n(3): Example list. You will be able to see your progress in each type of learning. Clicking on this will take you to the detail view. If you leave it pressed, you can delete the list.",
