--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -119,6 +119,7 @@
   "google_play_link": "https://play.google.com/store/apps/details?id=com.gabr.garc.kanpractice&hl=es&gl=US",
   "kanji_lists_versionDialog_button_label": "Ir a la tienda",
   "kanji_lists_versionDialog_title": "Nueva versión disponible",
+  "kanji_lists_versionDialog_notes": "Notas de Versión:",
   "kanji_lists_searchBar_hint": "Buscar por nombre de lista, kanji, significado, pronunciación",
   "kanji_lists_newUpdateAvailable_label": "¡Nueva actualización!",
   "kanji_lists_load_failed": "Fallo al recuperar las listas",
@@ -133,10 +134,11 @@
   "developer_info_report": "Reportar errores a",
   "launch_url_failed": "No se ha podido lanzar el sitio web",
   "settings_title": "Ajustes",
-  "settings_appearance_section": "Interfaz",
-  "settings_appearance_theme": "Cambiar tema",
-  "settings_progress_section": "Progreso",
-  "settings_progress_testHistory": "Historial de Tests",
+  "settings_general": "General",
+  "settings_general_theme": "Cambiar tema",
+  "settings_general_testHistory": "Historial de Tests",
+  "settings_tutorial_label": "Mostrar tutorial",
+  "settings_general_versionNotes": "Notas de Versión",
   "settings_account_section": "Gestionar Cuenta",
   "settings_account_label": "Cuenta",
   "settings_information_section": "Información",
@@ -166,7 +168,6 @@
   "study_modes_good_luck": "¡Buena Suerte!",
   "study_modes_empty": "La lista seleccionada para la prueba está vacía. No se puede realizar.",
   "load_failed_try_again_button_label": "Inténtalo de nuevo",
-  "settings_tutorial_label": "Mostrar tutorial",
   "tutorial_done": "¡Empezar!",
   "tutorial_skip": "Saltar Tutorial",
   "tutorial_kanlist": "¡Bienvenido a KanPractice!\n\nEn esta app podrás crear tus propias listas de vocabulario y ver tu progreso detalladamente mientras mejoras tu japonés.\n\nEsta es la vista principal. Aquí podrás hacer varias cosas como: crear listas, ver tu progreso en cada lista, filtrar, buscar y hacer tests.\n\n(1): Al pulsar aquí, un diálogo se mostrará para introducir el nombre de la nueva lista de vocabulario. Al crearla, aparecerá en la lista.\n\n(2): Estas son las dos acciones para realizar tests. Por un lado, el 'rayo' son los Blitz Tests, tests que constan de 30 palabras aleatorias pertenecientes a todas tus listas. Por otro lado, el 'círculo' son tests que puedes personalizar, escogiendo qué listas quieres que estén incluidas. En ambos modos puedes seleccionar qué tipo de aprendizaje quieres: escritura, lectura o reconocimiento.\n\n(3): Ejemplo de lista. Podrás ver tu progreso en cada tipo de aprendizaje. Al pulsar en esto, se te llevará a la vista de detalle. Si dejas pulsado, podrás eliminar la lista.",
