--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -136,6 +136,7 @@
   "settings_title": "Settings",
   "settings_general": "General",
   "settings_general_theme": "Switch Theme",
+  "settings_general_toggle": "Test scores impact in your practice",
   "settings_general_testHistory": "Test History",
   "settings_tutorial_label": "Show tutorial",
   "settings_general_versionNotes": "Version Notes",
