--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -136,6 +136,7 @@
   "settings_title": "Ajustes",
   "settings_general": "General",
   "settings_general_theme": "Cambiar tema",
+  "settings_general_toggle": "Los resultados de los tests influyen en las prácticas",
   "settings_general_testHistory": "Historial de Tests",
   "settings_tutorial_label": "Mostrar tutorial",
   "settings_general_versionNotes": "Notas de Versión",
