Visual guide on Test Impact Practice

--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -137,13 +137,14 @@
   "settings_general": "General",
   "settings_general_theme": "Switch Theme",
   "settings_general_toggle": "Test scores impact in your practice",
+  "settings_general_toggle_sub": "When active, the score of any word on any test will affect the overall score of the respective KanList(s)",
   "settings_general_testHistory": "Test History",
   "settings_tutorial_label": "Show tutorial",
   "settings_general_versionNotes": "Version Notes",
   "settings_account_section": "Manage Account",
   "settings_account_label": "Account",
   "settings_information_section": "Information",
-  "settings_information_contribute": "KanPractice is Open Source. Contribute!",
+  "settings_information_contribute": "KanPractice Development Status on GitHub",
   "settings_information_rating": "Rate the app!",
   "settings_information_rating_failed": "Could not launch app store",
   "settings_information_developer_label": "Developer",
