--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -137,13 +137,14 @@
   "settings_general": "Allgemein",
   "settings_general_theme": "Theme wechseln",
   "settings_general_toggle": "Testergebnisse beeinflussen Ihr Praxisergebnis",
+  "settings_general_toggle_sub": "Wenn diese Funktion aktiviert ist, wirkt sich die Punktzahl eines beliebigen Wortes in einem Test auf die Gesamtpunktzahl der jeweiligen KanListe(n) aus.",
   "settings_general_testHistory": "Testverlauf",
   "settings_tutorial_label": "Tutorial anzeigen",
   "settings_general_versionNotes": "Versionshinweise",
   "settings_account_section": "Konto verwalten",
   "settings_account_label": "Konto",
   "settings_information_section": "Information",
-  "settings_information_contribute": "KanPractice ist Open Source. Beitragen!",
+  "settings_information_contribute": "KanPractice Entwicklungsstatus auf GitHub",
   "settings_information_rating": "Die App bewerten!",
   "settings_information_rating_failed": "App Store konnte nicht gestartet werden",
   "settings_information_developer_label": "Entwickler",
