--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -137,13 +137,14 @@
   "settings_general": "General",
   "settings_general_theme": "Cambiar tema",
   "settings_general_toggle": "Los resultados de los tests influyen en las prácticas",
+  "settings_general_toggle_sub": "Cuando se activa, la puntuación de cualquier palabra en cualquier prueba afectará a la puntuación global de la(s) respectiva(s) KanList",
   "settings_general_testHistory": "Historial de Tests",
   "settings_tutorial_label": "Mostrar tutorial",
   "settings_general_versionNotes": "Notas de Versión",
   "settings_account_section": "Gestionar Cuenta",
   "settings_account_label": "Cuenta",
   "settings_information_section": "Información",
-  "settings_information_contribute": "KanPractice es de Código Abierto. ¡Contribuye!",
+  "settings_information_contribute": "Estado de Desarrollo de KanPractice en GitHub",
   "settings_information_rating": "¡Valora la aplicación!",
   "settings_information_rating_failed": "No se ha podido lanzar la tienda",
   "settings_information_developer_label": "Desarrollador",
