Install over Merge --> Resolved #10

--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -38,20 +38,20 @@
   "add_kanji_saveAndNext": "Añadir otro",
   "backup_bloc_creation_successful": "Copia de seguridad creada con éxito",
   "backup_bloc_creation_failed": "Algo salió mal mientras se creaba la copia de seguridad:",
-  "backup_bloc_merge_successful": "Copia de seguridad fusionada con éxito",
-  "backup_bloc_merge_failed": "Algo salió mal mientras se fusionaba la copia de seguridad:",
+  "backup_bloc_merge_successful": "Copia de seguridad instalada con éxito",
+  "backup_bloc_merge_failed": "Algo salió mal mientras se instalaba la copia de seguridad:",
   "backup_bloc_removal_successful": "Copia de seguridad eliminada con éxito",
   "backup_bloc_removal_failed": "Algo salió mal mientras se eliminaba la copia de seguridad:",
   "backup_title": "Copias de Seguridad",
   "backup_creation_tile": "Crear copia de seguridad",
-  "backup_merge_tile": "Fusionar copia de seguridad",
+  "backup_merge_tile": "Instalar copia de seguridad",
   "backup_removal_tile": "Eliminar copia de seguridad",
   "backup_creation_dialog_title": "Crear copia de seguridad",
   "backup_creation_dialog_content": "La copia de seguridad se creará en la nube. Los datos actuales de tu dispositivo se guardarán sustituyendo los datos de la copia de seguridad actual. Los tests no se guardarán. ¿Quieres continuar?",
   "backup_creation_dialog_positive": "Crear",
-  "backup_merge_dialog_title": "Fusión de copia de seguridad",
+  "backup_merge_dialog_title": "Instalar copia de seguridad",
   "backup_merge_dialog_content": "Los datos de la copia de seguridad se instalarán en tu dispositivo remplazándolos con los datos actuales que tienes. ¿Quieres continuar?",
-  "backup_merge_dialog_positive": "Fusionar",
+  "backup_merge_dialog_positive": "Instalar",
   "backup_removal_dialog_title": "Eliminación de la copia de seguridad",
   "backup_removal_dialog_content": "Los datos de la copia de seguridad se eliminarán completamente del servidor y ya no estarán disponibles. ¿Quieres continuar?",
   "backup_removal_dialog_positive": "Eliminar",
