--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -38,20 +38,20 @@
   "add_kanji_saveAndNext": "Weiteres hinzufügen",
   "backup_bloc_creation_successful": "Datensicherung erfolgreich erstellt",
   "backup_bloc_creation_failed": "Beim Erstellen der Datensicherung ist ein Fehler aufgetreten:",
-  "backup_bloc_merge_successful": "Datensicherung erfolgreich zusammengeführt ",
-  "backup_bloc_merge_failed": "Beim zusammenführen der Datensicherung ist ein Fehler aufgetreten:",
+  "backup_bloc_merge_successful": "Datensicherung erfolgreich installiert ",
+  "backup_bloc_merge_failed": "Beim Installation der Datensicherung ist ein Fehler aufgetreten:",
   "backup_bloc_removal_successful": "Datensicherung erfolgreich entfernt",
   "backup_bloc_removal_failed": "Beim Entfernen der Datensicherung ist ein Fehler aufgetreten: ",
   "backup_title": "Datensicherungen",
   "backup_creation_tile": "Datensicherung erstellen",
-  "backup_merge_tile": "Datensicherung zusammenführen",
+  "backup_merge_tile": "Datensicherung installieren",
   "backup_removal_tile": "Datensicherung löschen",
   "backup_creation_dialog_title": "Datensicherung wird erstellt",
   "backup_creation_dialog_content": "Die Datensicherung wird in der Cloud erstellt. Die aktuellen Daten auf Ihrem Gerät werden gespeichert und ersetzen die aktuellen Sicherungsdaten. Tests werden nicht gespeichert. Wollen Sie fortfahren? ",
   "backup_creation_dialog_positive": "Erstellen",
-  "backup_merge_dialog_title": "Kombiniere Datensicherungseinträge",
+  "backup_merge_dialog_title": "Installation Datensicherungseinträge",
   "backup_merge_dialog_content": "Die Sicherungsdaten werden auf Ihrem Gerät installiert und mit den aktuellen Daten, die Sie haben, ersetzt. Wollen Sie fortfahren? ",
-  "backup_merge_dialog_positive": "Zusammenführen",
+  "backup_merge_dialog_positive": "Installieren",
   "backup_removal_dialog_title": "Datensicherung wird entfernt",
   "backup_removal_dialog_content": "Die Sicherungsdaten werden vollständig vom Server entfernt und stehen nicht mehr zur Verfügung. Wollen Sie fortfahren?",
   "backup_removal_dialog_positive": "Entfernen",
