--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -38,20 +38,20 @@
   "add_kanji_saveAndNext": "Add Another",
   "backup_bloc_creation_successful": "Back up created successfully",
   "backup_bloc_creation_failed": "Something went wrong while creating the back up:",
-  "backup_bloc_merge_successful": "Back up merged successfully",
-  "backup_bloc_merge_failed": "Something went wrong while merging the back up:",
+  "backup_bloc_merge_successful": "Back up installed successfully",
+  "backup_bloc_merge_failed": "Something went wrong while installing the back up:",
   "backup_bloc_removal_successful": "Back up removed successfully",
   "backup_bloc_removal_failed": "Something went wrong while removing the back up:",
   "backup_title": "Back Ups",
   "backup_creation_tile": "Create Back Up",
-  "backup_merge_tile": "Merge Back Up",
+  "backup_merge_tile": "Install Back Up",
   "backup_removal_tile": "Remove Back Up",
   "backup_creation_dialog_title": "Creating Back Up",
   "backup_creation_dialog_content": "The back up will be created in the cloud. The current data in your device will be saved replacing the current back up data. Tests will not be saved. Do you want to proceed?",
   "backup_creation_dialog_positive": "Create",
-  "backup_merge_dialog_title": "Merging Back Up",
+  "backup_merge_dialog_title": "Installing Back Up",
   "backup_merge_dialog_content": "The back up data will be installed in your device replacing it with the current data you have. Do you want to proceed?",
-  "backup_merge_dialog_positive": "Merge",
+  "backup_merge_dialog_positive": "Install",
   "backup_removal_dialog_title": "Removing Back Up",
   "backup_removal_dialog_content": "The back up data will be completely removed from the server and it will be not available anymore. Do you want to proceed?",
   "backup_removal_dialog_positive": "Remove",
