--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -177,5 +177,15 @@
   "tutorial_lists": "Dies ist die Detailansicht einer Liste. Hier sehen Sie alle in der Liste enthaltenen Wörter in Farbe, was ihre individuelle Punktzahl angibt. Man kann üben oder Schreib, Lese oder Erkennungstests machen.",
   "tutorial_details": "Wenn Sie auf ein Wort klicken, können Sie das Wort selbst mit all seinen Details sehen: Lesung (mit der Option, es mit TTS anzuhören), das Wort selbst, Bedeutung, Statistik in Bezug auf Lerntypen und Erstellungsdatum.",
   "tutorial_practicing": "Wenn Sie üben oder Tests machen, müssen Sie jedes Wort oder Zeichen validieren, um die Note des Wortes selbst zu bezeichnen. Die Gesamtpunktzahl Ihrer Listen ergibt sich aus der Summe dieser Punktzahlen. Die Methode der Validierung ist je nach Lernmodus unterschiedlich: Schreiben, Lesen oder Erkennen",
-  "tutorial_options": "Es gibt noch mehr Optionen in den Einstellungen, also probieren Sie sie aus!\n\nBeginnen wir!"
+  "tutorial_options": "Es gibt noch mehr Optionen in den Einstellungen, also probieren Sie sie aus!\n\nBeginnen wir!",
+  "jisho_no_match": "Konnte keine Übereinstimmung in jisho.org finden",
+  "jisho_resultData_jlpt": "JLPT",
+  "jisho_resultData_strokes": "Anschläge",
+  "jisho_resultData_meaning_label": "Bedeutung",
+  "jisho_resultData_composed_label": "Zusammengesetzt aus",
+  "jisho_resultData_kunyomi": "Kun'yomi",
+  "jisho_resultData_onyomi": "On'yomi",
+  "jisho_resultData_phrases_label": "Beispiele Phrasen",
+  "jisho_resultData_examples_label": "Beispiele",
+  "jisho_resultData_powered_by": "Angetrieben durch Jisho & @h7x4"
 }
