--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -177,5 +177,15 @@
   "tutorial_lists": "This is the detail view of a list. Here you will see all the words included in the list with colors, denoting their individual grade. You will be able to practice or take writing, reading or recognition tests.",
   "tutorial_details": "By clicking on a word you will be able to see the word itself with all its data: reading (with option to listen to it using TTS), the word itself, meaning, statistics in reference to learning types and date of creation.",
   "tutorial_practicing": "When practicing or doing tests, you will have to validate each word or character to denote the note of the word itself. It is the aggregate of these scores that determines the total score of your lists. The method of validation varies between learning modes: writing, reading, or recognition.",
-  "tutorial_options": "There are more options in the Settings, be sure to try them out!\n\nLet's begin!"
+  "tutorial_options": "There are more options in the Settings, be sure to try them out!\n\nLet's begin!",
+  "jisho_no_match": "Could not find any match in jisho.org",
+  "jisho_resultData_jlpt": "JLPT",
+  "jisho_resultData_strokes": "Strokes",
+  "jisho_resultData_meaning_label": "Meaning",
+  "jisho_resultData_composed_label": "Composed of",
+  "jisho_resultData_kunyomi": "Kun'yomi",
+  "jisho_resultData_onyomi": "On'yomi",
+  "jisho_resultData_phrases_label": "Examples phrases",
+  "jisho_resultData_examples_label": "Examples",
+  "jisho_resultData_powered_by": "Powered by Jisho & @h7x4"
 }
